# pokemon_task

./: Cargo.toml  Dockerfile  README.md
src/: api.rs  main.rs
src/service/: description_translator_service.rs  mod.rs  pokemon_info_service.rs
