[package]
name = "pokemon_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
eyre = "0.6.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }

[dev-dependencies]
serde_urlencoded = "0.7.1"
wiremock = "0.5"


